Pokit support added

--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -17,7 +17,7 @@
                     <label class="login-field-icon fui-user" for="name"></label>
                 </div>
                 <div class="form-group">
-                    <input type="email" class="form-control login-field" value="" ng-model="user.email" ng-pattern="/^[_a-z0-9]+(\.[_a-z0-9]+)*@etf.unsa.ba/" placeholder="@etf.unsa.ba email" ng-minlength="4" ng-maxlength="50" id="email" required null-if-empty>
+                    <input type="email" class="form-control login-field" value="" ng-model="user.email" ng-pattern="/^[a-z0-9.]+)*@etf.unsa.ba/" placeholder="@etf.unsa.ba email" ng-minlength="4" ng-maxlength="50" id="email" required null-if-empty>
                     <label class="login-field-icon fui-mail" for="email"></label>
                 </div>
                 <div class="form-group">
