File Drag-Drop support added

--- a/etfFresh/css/style.css
+++ b/etfFresh/css/style.css
@@ -4,6 +4,12 @@ body {
   background-color: #ebf0f0;
 }
 
+.mightybar.dragover {
+  background-color: #1abc9c;
+  color: white;
+  border: 5px dashed white;
+  padding-top: 3px;
+}
 
 .mighty-textarea{
   height: 90px !important;
